--- a/src/page/header.pug
+++ b/src/page/header.pug
@@ -2,4 +2,6 @@ header.header
     .wrapper
         div
             img.logo(src="img/gulp.png", alt="")
+        svg
+            use(xlink:href="img/sprite.svg#boss" fill="white")
         p Gulp start
