--- a/src/scss/fontstyle/_fonts.scss
+++ b/src/scss/fontstyle/_fonts.scss
@@ -1,1 +1,5 @@
 @import "./font-face";
+
+@include font-face("Itim", "Itim-Regular", 400);
+@include font-face("Roboto", "Roboto-Bold", 700);
+@include font-face("Roboto", "Roboto-Regular", 400);
